--- a/Week01c/Terrain/Assembly-CSharp-vs.csproj
+++ b/Week01c/Terrain/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\New_Text_Script.cs" />
      <Compile Include="Assets\TextScript.cs" />
      <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
